tests/baselines/reference/importAndVariableDeclarationConflict3.errors.txt
==== tests/cases/compiler/importAndVariableDeclarationConflict3.ts (1 errors) ====
    module m {
      export var m = '';
    }
    
    import x = m.m;
    import x = m.m;
           ~
!!! error TS2300: Duplicate identifier 'x'.
    